--- a/Packet_Repeater_Installer/Bundle.wxs
+++ b/Packet_Repeater_Installer/Bundle.wxs
@@ -25,7 +25,7 @@
 	
 	
     <Bundle Name="UDP Packet Repeater" 
-			Manufacturer="JT4 LLC" 
+			Manufacturer="Summer Internship" 
 			Version="1.0.0.0" 
 			UpgradeCode="ed0db20e-808e-41c9-9c42-200ec2ba04d7"
 			IconSourceFile="C:\Users\pthomson01.ctr\source\repos\pace-thomson\UDP_Repeater_Service\UDP_Test_GUI\bin\Debug\jt4_logo.ico">
